@@ -1,0 +1,17 @@
+<?php
+/**
+ * read_message_print.tpl
+ *
+ * Let a non-JavaScript user know that they can print this page.
+ *
+ * @copyright &copy; 2008 The SquirrelMail Project Team
+ * @license http://opensource.org/licenses/gpl-license.php GNU Public License
+ * @version $Id: read_menubar_nav.tpl 12415 2007-05-18 11:05:23Z pdontthink $
+ * @package squirrelmail
+ * @subpackage templates
+ */
+?>
+
+<div id="printMessageBox">
+<?php echo _("Use your web browser's Print button or File -&gt; Print menu option to print this email. Afterwards, you can close this browser window again to return to SquirrelMail."); ?>
+</div>
